--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodeapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "test"
   },
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "hbs": "^4.0.0",
     "lodash": "^4.17.11",
+    "mongodb": "^3.1.10",
     "uuid": "^3.3.2"
   }
 }
