--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
     "hbs": "^4.0.0",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "sha256": "^0.2.0",
     "uuid": "^3.3.2"
   }
 }
