--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
     "sha256": "^0.2.0",
+    "socket.io": "^2.2.0",
     "uuid": "^3.3.2"
   }
 }
