--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "author": "Yuri",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
+    "expect": "^23.6.0",
     "express": "^4.16.4",
     "hbs": "^4.0.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "nodemon": "^1.18.9",
+    "request": "^2.88.0",
     "sha256": "^0.2.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
   }
 }
