--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   }
 }
