--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "crypto-js": "^3.1.9-1",
     "expect": "^23.6.0",
     "express": "^4.16.4",
+    "fetch": "^1.1.0",
     "hbs": "^4.0.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
     "sha256": "^0.2.0",
