--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^3.1.9-1",
     "expect": "^23.6.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "fetch": "^1.1.0",
     "hbs": "^4.0.0",
     "jsonwebtoken": "^8.4.0",
@@ -21,6 +22,8 @@
     "mongoose": "^5.4.0",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "request": "^2.88.0",
     "sha256": "^0.2.0",
     "socket.io": "^2.2.0",
