--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.0",
+    "mssql": "^4.3.0",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
