--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "crypto-js": "^3.1.9-1",
     "expect": "^23.6.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.15.6",
     "fetch": "^1.1.0",
     "hbs": "^4.0.0",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
@@ -29,7 +31,8 @@
     "sha256": "^0.2.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^23.6.0",
