--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Yuri",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "crypto-js": "^3.1.9-1",
     "expect": "^23.6.0",
     "express": "^4.16.4",
