--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "debug",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "license": "MIT",
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "sha256": "^0.2.0"
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1",
+    "sha256": "^0.2.0",
+    "winston": "^3.2.1"
   }
 }
